--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 # VALUES : C3_TPR, C3_TPT, MPP_TPR, MPP_TPT
 # PORTS  : 3003,3004,2002,2004
 # VERSIONS : 121 , "", 200, 300 
-REACT_APP_SW_TYPE = 'C3_TPR'
+REACT_APP_SW_TYPE = 'MPP_TPT'
 REACT_APP_TEST_SEQUENCE_KEY = "grluser@123"
